# allin

./: CMakeLists.txt  README.md
src/: display.c  display.h  keyboard.c  keyboard.h  mouse.c  mouse.h  multitouch.c  multitouch.h  os.h  system.h  unicode.h
src/cpp/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/linux/: error.c  error.h  keyboard.c  keyboard.h  mouse.c  mouse.h  system.c  system.h
src/test/: main.c
src/win/: directinput.h  display.c  display.h  error.c  error.h  keyboard.c  keyboard.h  mouse.c  mouse.h  system.c  system.h
